# XerxFav-ResLangCore

./: #arca-full-migrate.sh  #arca-full-migrate.sh#  .Makefile.swp  .gitignore  .woodpecker.yml  Beseda_13_09_25.txt  Beseda_18.09  Beseda_18.09.25  Beseda_18.09.py  CONTRIBUTING.md  Current structure of Arcalang.txt  Makefile  Makefile.phases  Project_structure.txt  README.md  ResLang  The current structure of Arcalang  __init__.py  arca-full-migrate.sh  arca_lang_spec.md  config.py  coverage.txt  engine.py  fieldmap.dot  fieldmap_output.txt  grav_core_ternary.py  index.md  mg_invariants.py  mg_operators.py  mg_registry.py  mg_space.py  mg_stability.py  mkdocs.yml  operators.py  phase_report.md  pyproject.toml  pytest.ini  repo_structure.txt  requirements.txt  requirements.txt~  (+7 more)
.ssh/: id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
arca_core/: chronotope.py  chronotope.py,cover  phase.py
arca_fieldcore/: generate_ontology.py  generator.py  schema.py
arca_interpreter/: evaluator.py
arca_langlib/: __init__.py  __main__.py  casus_reducibilis.py  cli.py  interactive_cli.py  langlib_spec.md  protoform_operator.py  structure_arca_langlib.txt  validity.py
ci/: #phase_report.md  current_tree.txt  diff_report.md  library_audit.md  phase_report.md
docs/: Project_structure.txt  arca_lang_canon.md  arca_lang_spec.md  ci_orchestration.md  index.md  metapysics_dependencies.dot  metapysics_dependencies.md  ontology.md  specification.md  terminology_norms.md
phase_agent/: README.md
phases/: arca-phase.yml
requirements/: core.txt  extras.txt  ml.txt
(+205 files in other folders)
